k8s/production/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: tamagotchi-production
spec:
  redirectScheme:
    permanent: true
    scheme: https
